cmake_minimum_required(VERSION 3.17)
project(AlgoArchive)

set(CMAKE_CXX_STANDARD 17)

add_executable(135-candy leetcode/editor/en/135-candy.cpp)
add_executable(136-single-number leetcode/editor/en/136-single-number.cpp)
add_executable(137-single-number-ii leetcode/editor/en/137-single-number-ii.cpp)
add_executable(128-longest-consecutive-sequence leetcode/editor/en/128-longest-consecutive-sequence.cpp)
add_executable(4-median-of-two-sorted-arrays leetcode/editor/en/4-median-of-two-sorted-arrays.cpp)